--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -21,7 +21,7 @@ upstream nextjs_upstream {
 server {
     listen 80;
     listen [::]:80;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name agentsflowai.cloud www.agentsflowai.cloud;
     
     # Let's Encrypt challenge
     location /.well-known/acme-challenge/ {
@@ -38,11 +38,11 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name agentsflowai.cloud www.agentsflowai.cloud;
 
     # SSL Configuration (Let's Encrypt)
-    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/agentsflowai.cloud/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/agentsflowai.cloud/privkey.pem;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
