--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "lucide-react": "^0.474.0",
     "next": "~15.4.10",
     "next-themes": "^0.4.4",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -88,10 +89,10 @@
     "zod": "^3.24.2"
   },
   "optionalDependencies": {
-    "@next/swc-linux-x64-musl": "~15.4.8",
-    "@next/swc-linux-x64-gnu": "~15.4.8",
+    "@next/swc-linux-arm64-gnu": "~15.4.8",
     "@next/swc-linux-arm64-musl": "~15.4.8",
-    "@next/swc-linux-arm64-gnu": "~15.4.8"
+    "@next/swc-linux-x64-gnu": "~15.4.8",
+    "@next/swc-linux-x64-musl": "~15.4.8"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -100,6 +101,7 @@
     "@types/eslint": "^8.56.10",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.14.10",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
