--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "@tiptap/react": "^3.3.1",
     "@tiptap/starter-kit": "^3.3.1",
     "@types/json-schema": "^7.0.15",
-    "axios": "^1.7.9",
+    "axios": "^1.13.2",
     "better-auth": "~1.3.26",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
