--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.24.1",
+    "@anthropic-ai/sdk": "^0.22.0",
+    "openai": "^4.52.7",
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
