--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "disk-usage": "used=$(du -sm / | cut -f1); total=$(stat -f -c \"%b %S\" / | awk '{print $1*$2/1048576}'); echo \"Total: ${total%.*} MB, Used: ${used} MB, Free: $(( ${total%.*} - used )) MB\""
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.22.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.24.1",
-    "@anthropic-ai/sdk": "^0.22.0",
-    "openai": "^4.52.7",
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
@@ -61,6 +60,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.2",
     "@tiptap/pm": "^3.3.1",
     "@tiptap/react": "^3.3.1",
@@ -77,6 +77,7 @@
     "lucide-react": "^0.474.0",
     "next": "~15.4.10",
     "next-themes": "^0.4.4",
+    "openai": "^4.52.7",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
