--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tiptap": "^1.32.2",
+    "twilio": "^5.11.1",
     "zod": "^3.24.2"
   },
   "optionalDependencies": {
