--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.24.1",
-    "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -82,7 +81,6 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
@@ -91,8 +89,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tiptap": "^1.32.2",
-    "twilio": "^5.11.1",
-    "zod": "^3.24.2"
+    "twilio": "^5.11.1"
   },
   "optionalDependencies": {
     "@next/swc-linux-arm64-gnu": "~15.4.8",
